--- a/Echecs/Echecs/Echecs.vbproj
+++ b/Echecs/Echecs/Echecs.vbproj
@@ -70,7 +70,7 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Classes\PanelAcceuil.vb">
+    <Compile Include="Classes\AnimatedPbx.vb">
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="Form1.vb">
@@ -121,6 +121,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Screenshot 2014-10-05 22.12.24.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Preset.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Update.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Warning.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\editedcar2.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\IMG_8704.JPG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\download.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.VisualBasic.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
