--- a/Echecs/Echecs/Echecs.vbproj
+++ b/Echecs/Echecs/Echecs.vbproj
@@ -55,6 +55,9 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Transitions">
+      <HintPath>..\..\..\..\SourceTree\winfavs\WinFavs\Libraries\Transitions.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Import Include="Microsoft.VisualBasic" />
